# devops_framework

./: .dockerignore  .gitignore  Makefile  README.md  config.example.yaml  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: configuration.md  index.md  installation.md
docs/api/: aws.md  core.md  datadog.md  eks.md
docs/cli/: aws.md  datadog.md  eks.md
docs/examples/: manage-deployments.md  query-logs.md  troubleshoot-ec2.md
site/: 404.html  index.html
site/api/aws/: index.html
site/api/core/: index.html
site/api/datadog/: index.html
site/api/eks/: index.html
site/cli/aws/: index.html
site/cli/datadog/: index.html
site/cli/eks/: index.html
site/configuration/: index.html
site/examples/manage-deployments/: index.html
site/examples/query-logs/: index.html
site/examples/troubleshoot-ec2/: index.html
site/installation/: index.html
site/search/: search_index.json
src/devops_framework/: __init__.py
src/devops_framework/aws/: __init__.py  base.py  cloudwatch.py  ec2.py  lambda_.py  rds.py
src/devops_framework/cli/: __init__.py  aws.py  datadog.py  eks.py  main.py
src/devops_framework/core/: __init__.py  base.py  config.py  exceptions.py  logging.py
tests/: conftest.py
tests/aws/: test_cloudwatch.py  test_ec2.py  test_lambda.py  test_rds.py
tests/cli/: test_aws_cli.py  test_datadog_cli.py  test_eks_cli.py
tests/core/: test_config.py  test_exceptions.py
tests/datadog/: test_logs.py  test_metrics.py
tests/eks/: test_clusters.py  test_deployments.py  test_pods.py  test_services.py
(+10 files in other folders)
