[build-system]
requires = ["setuptools>=72.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devops-framework"
version = "0.1.0"
description = "A Python framework for DevOps troubleshooting with AWS, EKS, and Datadog integrations"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35.0,<2.0",
    "botocore>=1.35.0,<2.0",
    "kubernetes>=29.0.0,<36.0",
    "datadog-api-client>=2.40.0,<3.0",
    "typer>=0.12.0,<1.0",
    "rich>=13.0.0,<14.0",
    "pyyaml>=6.0.0,<7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0",
    "pytest-cov>=5.0.0,<6.0",
    "moto[ec2,rds,lambda,cloudwatch]>=5.0.0,<6.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-PyYAML>=6.0.0",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
]

[project.scripts]
devops = "devops_framework.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
devops_framework = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=devops_framework --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
